// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`github-workflow workflow job calling a reusable workflow & inherited secrets 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: test-workflow
on: {}
jobs:
  call-another-workflow:
    name: Some reusable workflow
    permissions: {}
    uses: some-user/example-action.yaml@v1
    secrets: inherit
"
`;

exports[`github-workflow workflow job calling a reusable workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: test-workflow
on: {}
jobs:
  call-another-workflow:
    name: Some reusable workflow
    permissions: {}
    uses: some-user/example-action.yaml@v1
    with:
      foo: true
      bar: example
    secrets:
      credentials: super-secret
"
`;
